[package]
name = "cfuk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.69.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "cfuk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.28.0" }
anchor-spl = "0.28.0"
